mudanças de estilo

--- a/style.css
+++ b/style.css
@@ -39,9 +39,10 @@ header > p{
 }
 
 a{
-    color: white;
     text-decoration: none;
+    color: white;
     font-weight: bolder;
+    font-size: 1em;
 }
 
 a:hover{
